--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -25,20 +25,16 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 col-md-12 col-lg-8 order-2 order-md-1">
-                        <div class="row">
+                        <div class="row" style="border-bottom:1px solid;">
                             <div class="col-12 col-sm-4">
-                                <div class="info-box bg-light">
-                                    <div class="info-box-content">
-                                        <span class="info-box-text text-center text-muted">Estimated budget</span>
-                                        <span class="info-box-number text-center text-muted mb-0">2300</span>
-                                    </div>
-                                </div>
+                                <a class="btn btn-secondary" asp-controller="Tickets" asp-action="Create" method="get">Create New Ticket</a>
+                                <a class="btn btn-secondary" asp-controller="Tickets" asp-action="Index" method="get">View All Tickets</a>
                             </div>
                             <div class="col-12 col-sm-4">
                                 <div class="info-box bg-light">
                                     <div class="info-box-content">
-                                        <span class="info-box-text text-center text-muted">Total amount spent</span>
-                                        <span class="info-box-number text-center text-muted mb-0">2000</span>
+                                        <span class="info-box-text text-center text-muted">Estimated project duration</span>
+                                        <span class="info-box-number text-center text-muted mb-0">20 <span>
                                     </div>
                                 </div>
                             </div>
