--- a/Views/Inboxes/Details.cshtml
+++ b/Views/Inboxes/Details.cshtml
@@ -5,7 +5,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<CustomUser> userManager
 @{
-    ViewData["Title"] = "Inbox";
+    ViewData["Title"] = "View Inbox";
 }
 
 <section class="content">
