--- a/Views/Inboxes/Reply.cshtml
+++ b/Views/Inboxes/Reply.cshtml
@@ -1,12 +1,13 @@
 ﻿@model BugTracker.Models.Inbox
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Reply";
 }
 
 @using BugTracker.Services
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<CustomUser> userManager
+
 
 <section class="content">
     <br />
@@ -53,15 +54,12 @@
                     <h3 class="card-title">Compose New Message</h3>
                 </div>
                 <!-- /.card-header -->
-                <form asp-action="Create">
+                <form asp-action="Reply" method="post">
                     <div class="card-body">
 
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <div class="form-group">
-                            <label asp-for="ReceiverId" class="control-label"></label>
-                            <select asp-for="ReceiverId" class="form-control" asp-items="ViewBag.ReceiverId"></select>
-                        </div>
+                        <input type="hidden" asp-for="ReceiverId" value="@ViewBag.senderIds" />
                         <div class="form-group">
                             <label asp-for="Subject" class="control-label"></label>
                             <input asp-for="Subject" class="form-control" />
@@ -79,7 +77,7 @@
                             <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Send</button>
                             <a asp-action="Index" class="btn btn-default"><i class="fas fa-times"></i> Cancel</a>
                         </div>
-                      
+
                     </div>
                     <!-- /.card-footer -->
                 </form>
